@@ -1,0 +1,3 @@
+. ./admin/defs.sh
+
+./admin/commit.sh && pushLaunchpad || error
