@@ -1,0 +1,5 @@
+. ./admin/defs.sh
+echo "Changes:"
+getDiff ChangeLog
+echo
+bzr stat
